Bug 1595708 - Cargo build timings SVG output Freezes the entire browser with WebRender r=nical,jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D56244

--HG--
extra : moz-landing-system : lando