gfx/webrender_bindings/src/lib.rs
@@ -21,6 +21,8 @@ extern crate log;
 
 #[cfg(target_os = "windows")]
 extern crate dwrote;
+#[cfg(target_os = "windows")]
+extern crate winapi;
 
 
 #[cfg(target_os = "macos")]
